test/fail/syntax_error/expected_token.amla
func foo {
     x : i32 = 3
}